@@ -1,5 +1,9 @@
 2007-12-20  Sam Steingold  <sds@gnu.org>
 
+	* type.lisp (SIGNED-BYTE, UNSIGNED-BYTE): unify error messages
+
+2007-12-20  Sam Steingold  <sds@gnu.org>
+
 	fix bug [ 1779490 ]: linux:dirent definition error
 	* modules/bindings/glibc/linux.lisp (clisp_dirent_ino_t)
 	(clisp_dirent_off_t): define depending on __USE_FILE_OFFSET64
